--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <h1>设置主页</h1>
 {% for gallery in gallerys.all %}
-{{gallery.description}}
+<img src="{{gallery.image.url}}">
+{{gallery.image.url}}
 {% endfor %}
