--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -108,7 +108,7 @@
   </section>
   <div class="container">
   	{% for blog in blogs.all %}
-	<h2><a href="">{{blog.title}}</a></h2>
+	<h2><a href="{{blog.id}}">{{blog.title}}</a></h2>
 	
 	{{blog.date}}
 	<br>
